fixed force weapon
more vehicle stuff, shooting weapons applies the facing of the weapon's armor, fixed a bug with facing detection, fixed the description ui thing that wasnt showing properly

--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -641,13 +641,14 @@
 .fortyk .item-description{
     flex-grow:10;
     height: 300px;
+    min-height: 300px;
 }
 .fortyk .actor-background{
     flex-grow:10;
     height: 100%;
 }
 .fortyk .backgroundandnotes{
-    height:100%
+    height:100%;
 }
 .fortyk .editor{
     height:100%;
