--- a/templates/chat/chat-test.html
+++ b/templates/chat/chat-test.html
@@ -12,6 +12,9 @@
         {{#if numberHits}}
         <span class="chat-line">{{numberHits}}</span>
         {{/if}}
+        {{#if sizePenalty}}
+        <span class="chat-line">{{sizePenalty}}</span>
+        {{/if}}
     </div>
 
     {{#unless reroll}}
