--- a/templates/chat/chat-forcefield-test.html
+++ b/templates/chat/chat-forcefield-test.html
@@ -18,8 +18,9 @@
         <span class="chat-line test-failure">{{this.string}}</span>
         {{/if}}
     </div>
-    <div class="chat-target">
+    
         {{/each}}
+    <div class="chat-target flexcol">
         <span class="roll-result">Remaining Hits: {{remainingHits}}</span>
         {{#if breaks}}
         <span class="chat-line ">{{breaks}}</span>
