more knight house stuff

--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -208,6 +208,7 @@
     place-items: center stretch;
     margin-top: 0px;
     margin-bottom:5px;
+    
 }
 .fortyk .descr .descrRow{
     width:100%;
@@ -219,6 +220,7 @@
     font-weight: bold;
     font-style:bold;
     font-variant-caps: petite-caps;
+    place-self: flex-start;
 
 }
 .fortyk .sheet-main .header-fields .creationOps{
@@ -384,6 +386,11 @@
     justify-items: stretch;
     align-items: stretch;
 }
+.fortyk .list-emphasis{
+    text-decoration: underline;
+    text-shadow: none;
+    border: 3px solid #7e0404; 
+}
 .fortyk .list3col{
 
     grid-template-columns: auto 30px 30px;
@@ -436,6 +443,9 @@
     height:100%;
     padding:3px;
     grid-column-end :span 3;
+}
+.fortyk .list-button{
+    flex:none;
 }
 .fortyk .power-training{
     width:100%;
@@ -908,4 +918,5 @@
     from {opacity: 0;}
     to {opacity:1 ;}
 }
+
 [hidden] { display: none !important; }
