--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -61,8 +61,8 @@
 }
 
 .grid-6col {
-    grid-column: span 5 / span 5;
-    grid-template-columns: repeat(5, minmax(0, 1fr));
+    grid-column: span 6 / span 6;
+    grid-template-columns: repeat(6, minmax(0, 1fr));
 }
 
 .grid-7col {
@@ -380,6 +380,11 @@
     text-shadow: none;
     border: 3px solid #999;
 }
+.fortyk .tabs .item.active2 {
+    text-decoration: underline;
+    text-shadow: none;
+    border: 3px solid #999;
+}
 .fortyk .list{
     border: 1px solid #999;
     flex:none;
@@ -394,6 +399,10 @@
 .fortyk .list3col{
 
     grid-template-columns: auto 30px 30px;
+}
+.fortyk .list4col2{
+
+    grid-template-columns: auto 2em 1em 1em;
 }
 .fortyk .list4col{
 
@@ -443,6 +452,13 @@
     height:100%;
     padding:3px;
     grid-column-end :span 3;
+}
+.fortyk .list-item-header4{
+    border: 3px solid #999;
+    width:100%;
+    height:100%;
+    padding:3px;
+    grid-column-end :span 4;
 }
 .fortyk .list-button{
     flex:none;
@@ -684,6 +700,10 @@
     width:150px;
     height: 210px !important;
 }
+.fortyk .knight-img{
+    width:150px;
+    height: 150px !important;
+}
 .fortyk .npcheader{
 
     display:grid;
@@ -918,5 +938,17 @@
     from {opacity: 0;}
     to {opacity:1 ;}
 }
-
+.mechlab-wrapper{
+    height:100%;
+    overflow:hidden;
+}
+.left-mechbay{
+    overflow-y: scroll;
+    overflow-x: hidden;
+    display: block;
+    height: 100%;
+}
+.right-mechbay{
+   flex:3; 
+}
 [hidden] { display: none !important; }
